[package]
name = "iso7816"
version = "0.1.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
repository = "https://github.com/ycrypto/iso7816"
description = "Types for ISO 7816"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/iso7816"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.2"
heapless = "0.7"

[features]
std = []

[dev-dependencies]
hex-literal = "0.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
