[package]
name = "iso7816"
version = "0.2.0"
authors = ["The Trussed developers"]
edition = "2021"
repository = "https://github.com/trussed-dev/iso7816"
description = "Types for ISO 7816"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/iso7816"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
heapless = "0.9"
heapless-bytes = { version = "0.5.0", optional = true }

[features]
std = []
defmt = ["dep:defmt"]

[dev-dependencies]
hex-literal = "0.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
